--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
               cp -r ~/tmp/open-vm-tools/* ~/tmp/spksrc/
               cp -r /usr/bin/sponge ~/tmp/spksrc/
               cp -f docker.sh ~/tmp/spksrc/
-              docker run -it -v ~/tmp/spksrc:/spksrc ghcr.io/synocommunity/spksrc /spksrc/docker.sh
+              docker run -i -v ~/tmp/spksrc:/spksrc ghcr.io/synocommunity/spksrc /spksrc/docker.sh
               cp -f ~/tmp/spksrc/packages/*.spk /tmp
               cp -r /spksrc/sponge /usr/bin/
               cd /spksrc/spk/open-vm-tools-12/
