--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libelf-dev moreutils glibc-source libc-dev-bin build-essential
+          sudo apt-get install -y libelf-dev moreutils glibc-source libc-dev-bin build-essential docker.io
 
       # Build incremental
       - name: Build image
