--- a/cross/open-vm-tools/Makefile
+++ b/cross/open-vm-tools/Makefile
@@ -6,7 +6,7 @@ PKG_DIST_NAME = $(PKG_NAME)-$(PKG_VERS)-$(PKG_BUILD).$(PKG_EXT)
 PKG_DIST_SITE = https://github.com/vmware/open-vm-tools/releases/download/stable-$(PKG_VERS)
 PKG_DIR = $(PKG_NAME)-$(PKG_VERS)-$(PKG_BUILD)
 
-DEPENDS = cross/libmspack cross/glib cross/protobuf cross/openssl cross/fuse cross/curl cross/libtirpc cross/procps-ng cross/icu
+DEPENDS = cross/glib cross/curl cross/moreutils cross/protobuf cross/openssl cross/libmspack cross/fuse3 cross/libtirpc cross/procps-ng cross/icu cross/libiconv
 
 HOMEPAGE = https://github.com/vmware/open-vm-tools
 COMMENT  = VMware open-vm-tools project
@@ -17,18 +17,16 @@ INSTALL_TARGET = vmtools_install
 POST_INSTALL_TARGET = vmtools_post_install
 
 ENV = PATH=$(STAGING_INSTALL_PREFIX)/bin:$$PATH
-ENV += CUSTOM_PROCPS_NAME=procps
-ENV += CUSTOM_PROCPS_LIBS="-L$(STAGING_INSTALL_PREFIX)/lib -lprocps"
 
 GNU_CONFIGURE = 1
-CONFIGURE_ARGS = --without-x
-CONFIGURE_ARGS += --disable-resolutionkms
-CONFIGURE_ARGS += --with-tirpc
+CONFIGURE_ARGS = 
+CONFIGURE_ARGS += --with-fuse=fuse3
+CONFIGURE_ARGS += --without-x
 CONFIGURE_ARGS += --without-pam
 CONFIGURE_ARGS += --without-xmlsec1
-CONFIGURE_ARGS += --without-icu
-CONFIGURE_ARGS += --enable-containerinfo=no
 CONFIGURE_ARGS += --enable-servicediscovery
+CONFIGURE_ARGS += --enable-containerinfo=no
+
 include ../../mk/spksrc.cross-cc.mk
 
 .PHONY: vmtools_pre_configure
@@ -45,5 +43,5 @@ vmtools_post_install:
 	# chmod a-x $(STAGING_INSTALL_PREFIX)/etc/vmware-tools/*.conf
 	chmod a-x $(STAGING_INSTALL_PREFIX)/etc/vmware-tools/*.conf.example
 	# chmod a-x $(STAGING_INSTALL_PREFIX)/etc/vmware-tools/vgauth/schemas/*
-	chmod a-x $(STAGING_INSTALL_PREFIX)/lib/udev/rules.d/99-vmware-scsi-udev.rules
+	# chmod a-x $(STAGING_INSTALL_PREFIX)/lib/udev/rules.d/99-vmware-scsi-udev.rules
 	mv $(STAGING_INSTALL_PREFIX)/usr/bin/vm-support $(STAGING_INSTALL_PREFIX)/bin/
